# gpx

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yml  publish.yml  test.yml
docs/: Makefile  api.md  changelog.md  cli.md  conf.py  index.md  usage.md
gpx/: __init__.py  gpx.py  route.py  track.py  utils.py  waypoint.py
src/gpx/: __init__.py  __main__.py  _parsers.py  base.py  bounds.py  cli.py  convert.py  copyright.py  element.py  email.py  errors.py  extensions.py  gpx.py  gpx.xsd  io.py  link.py  metadata.py  mixins.py  operations.py  person.py  route.py  track.py  track_segment.py  types.py  utils.py  validation.py  waypoint.py
src/gpx/models/: __init__.py  bounds.py  copyright.py  email.py  gpx.py  link.py  metadata.py  person.py  route.py  track.py  track_segment.py  utils.py  waypoint.py
tests/: conftest.py  smoke_test.py  test_base.py  test_bounds.py  test_cli.py  test_edge_cases.py  test_extensions.py  test_gpx.py  test_io.py  test_io_convert.py  test_main.py  test_metadata.py  test_mixins.py  test_operations.py  test_route.py  test_statistics.py  test_track.py  test_track_segment.py  test_types.py  test_utils.py  test_validation.py  test_waypoint.py
tests/fixtures/invalid/: bad_copyright_year.gpx  degrees_negative.gpx  degrees_too_high.gpx  dgps_station_negative.gpx  dgps_station_too_high.gpx  duplicate_metadata.gpx  duplicate_name.gpx  gpx_10_namespace.gpx  invalid_fix_uppercase.gpx  invalid_fix_value.gpx  invalid_time.gpx  lat_too_high.gpx  lat_too_low.gpx  lon_too_high.gpx  lon_too_low.gpx  malformed_xml.gpx  missing_bounds_minlat.gpx  missing_copyright_author.gpx  missing_creator.gpx  missing_email_domain.gpx  missing_email_id.gpx  missing_lat.gpx  missing_lat_lon.gpx  missing_link_href.gpx  missing_lon.gpx  missing_namespace.gpx  missing_rtept_lat.gpx  missing_trkpt_lat.gpx  missing_version.gpx  non_integer_sat.gpx  non_numeric_elevation.gpx  non_numeric_lat.gpx  non_numeric_lon.gpx  not_gpx_root.gpx  unknown_element.gpx  wrong_namespace.gpx
tests/fixtures/valid/: all_fix_types.gpx  boundary_coords.gpx  degrees_values.gpx  dgps_station_values.gpx  empty_route.gpx  empty_track.gpx  empty_track_segment.gpx  extreme_elevations.gpx  full.gpx  high_precision_coords.gpx  large_gpx.gpx  metadata.gpx  metadata_minimal.gpx  metadata_with_bounds.gpx  minimal.gpx  multiple_routes.gpx  multiple_tracks.gpx  multiple_waypoints.gpx  no_xml_declaration.gpx  route.gpx  route_with_links.gpx  route_with_stats.gpx  special_characters.gpx  time_formats.gpx  track.gpx  track_multi_segment.gpx  track_single_point.gpx  track_with_links.gpx  track_with_stats.gpx  unicode_content.gpx  waypoint.gpx  waypoint_all_fields.gpx  waypoint_minimal.gpx  waypoint_with_links.gpx  whitespace_content.gpx
tests/fixtures/warnings/: foreign_namespace.gpx  longitude_180.gpx  naive_time.gpx  out_of_order.gpx  unqualified_extensions.gpx  wrong_version.gpx
