[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[project]
name = "gpx"
version = "2025.1.0"
description = "PyGPX is a Python package that brings support for reading, writing and converting GPX files."
authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["gpx", "gps", "xml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.10, <4"
dependencies = [
    "lxml",
    "python-dateutil",
    "typing-extensions; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "ruff",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxext-opengraph",
]
tests = [
    "pytest"
]

[project.urls]
Documentation = "https://gpx.readthedocs.io/en/stable/"
Changelog = "https://gpx.readthedocs.io/en/stable/changelog.html"
"Source code" = "https://github.com/sgraaf/gpx"
Issues = "https://github.com/sgraaf/gpx/issues"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma (flake8-commas), handled by the formatter
    "D102",  # undocumented-public-method (pydocstyle)
    "D105",  # undocumented-magic-method (pydocstyle)
    "D107",  # undocumented-public-init (pydocstyle)
    "E501",  # line-too-long (pycodestyle), handled by the formatter
    "PLC2401",  # non-ascii-name (Pylint)
    "S101",   # assert (flake8-bandit)
    "SLF001",  # private-member-access (flake8-self)
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # unused-import (Pyflakes)
]
"docs/conf.py" = [
    "INP001",  # implicit-namespace-package (flake8-no-pep420)
]
"tests/**/test_*.py" = [
    "D",  # pydocstyle
    "PLR2004",   # magic-value-comparison (Pylint)
    "S101",   # assert (flake8-bandit)
]
"tests/conftest.py" = [
    "D401",  # non-imperative-mood (pydocstyle)
]
"tests/smoke_test.py" = [
    "PLR2004",   # magic-value-comparison (Pylint)
]
